# research-protocol

./: .gitignore  ARCHITECTURE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  skill.md
.github/workflows/: pages.yml
agent/: package.json
agent/src/: example-research.ts  researcher.ts
anchor/: Anchor.toml  package.json
anchor/programs/research-protocol/: Cargo.toml
anchor/programs/research-protocol/src/: lib.rs
anchor/tests/: research-protocol.ts
api/: package.json
api-serverless/: package.json
api-serverless/api/: health.js  research.js
api/src/: index.ts
dashboard/: index.html  package.json  vercel.json
demo/: full-workflow.ts
research/agent-ready-protocols/: methodology.hash  methodology.json  report.hash  report.md  sources.json
research/agent-security-patterns/: methodology.hash  methodology.json  report.hash  report.md
research/defi-security-audits/: methodology.hash  methodology.json  report.hash  report.md  sources.json
research/hackathon-landscape/: full_leaderboard.json  leaderboard_data.json  methodology.hash  methodology.json  report.hash  report.md
sdk/: package.json
sdk/src/: index.ts
video/: VIDEO_PLAN.md
