[package]
name = "research-protocol"
version = "0.1.0"
description = "Verifiable research protocol for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "research_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
